# beanahead

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_tests.txt  requirements_tests_v2.txt  ruff.toml  setup.py
.agents/skills/dependencies-management/: SKILL.md
.agents/skills/update-agents-md/: SKILL.md
.github/: release-drafter.yml
.github/workflows/: build-test.yml  release.yml
examples/: extraction.beancount  injection.beancount  ledger.beancount  rx_def_empty.beancount  rx_def_initial_COPY.beancount  rx_def_initial_PREV copy.beancount  rx_def_updated.beancount  x.beancount
examples/config/: dflt.ini
examples/defs/: _rx_def_INITIAL_COPY.beancount  rx_def.beancount  rx_def_updated.beancount  x.beancount
examples/new_empty_files/: rx.beancount
examples/recon/: expected_injection.beancount  extraction.beancount  rx.beancount  rx_updated.beancount  x.beancount  x_updated.beancount
extra_requirements/: requirements_dev.txt
src/beanahead/: __init__.py  config.py  errors.py  expired.py  hooks.py  reconcile.py  rx_txns.py  utils.py
src/beanahead/plugins/: __init__.py  rx_txn_plugin.py
src/beanahead/scripts/: __init__.py  cli.py
tests/: __init__.py  cmn.py  conftest.py  test_config.py  test_errors.py  test_expired.py  test_init.py  test_plugins.py  test_reconcile.py  test_rx_txns.py  test_utils.py
tests/resources/: example_ledger.beancount  example_ledger_txns.beancount  example_rx.beancount  extraction.beancount  injection.beancount  rx.beancount
tests/resources/answers/: example_rx_txns_rmvd.beancount
tests/resources/config/: alt.ini  alt_ext.ini
tests/resources/defs/: defs.beancount  defs_230630.beancount  defs_opts.beancount  defs_opts_221231.beancount  defs_repeat_payee.beancount  ledger.beancount  ledger_opts.beancount  ledger_with_error.beancount  rx_221231.beancount  rx_230630.beancount  rx_def.beancount  rx_def_updated.beancount  rx_def_updated_updated.beancount  rx_opts_221231.beancount  rx_to_221231.beancount  rx_to_230630.beancount
tests/resources/expired/: expected_rx.beancount  expected_x.beancount  rx.beancount  x.beancount
tests/resources/make/: rx_opts.beancount
tests/resources/recon/: expected_injection.beancount  expected_injection_ascending.beancount  expected_rx.beancount  expected_x.beancount  extraction.beancount  rx.beancount  x.beancount
