[build-system]
requires = ["setuptools>=77.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "beanahead"
description = "Beancount extension for future transactions"
authors = [
  {email = "marcusaread.prog@proton.me"},
  {name = "Marcus Read"},
]
readme = "README.md"
license = "MIT"
keywords = ["accounting", "beancount", "ledger", "finance"]
dynamic = ["version"]
requires-python = "~=3.10"

classifiers = [
	"Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "beancount",
    "beangulp",
    "pandas",
]

[dependency-groups]
test = [
    "pytest",
]
dev = [
    {include-group = "test"},
    "mypy",
    "mypy-extensions",
    "pre-commit",
    # "ruff",  # use local standalone install or ruff extension for editor.
]

[project.urls]
homepage = "https://github.com/maread99/beanahead"
documentation = "https://github.com/maread99/beanahead"
"Issue Tracker" = "https://github.com/maread99/beanahead/issues"
"Source Code" = "https://github.com/maread99/beanahead"

[project.scripts]
beanahead = "beanahead.scripts.cli:main"

[tool.setuptools_scm]
write_to = "src/beanahead/_version.py"
