[build-system]
requires = ["setuptools>=77.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "beanahead"
description = "Beancount extension for future transactions"
authors = [
  {email = "marcusaread.prog@proton.me"},
  {name = "Marcus Read"},
]
readme = "README.md"
license = "MIT"
keywords = ["accounting", "beancount", "ledger", "finance"]
dynamic = ["version"]
requires-python = ">=3.10, <4"

classifiers = [
	"Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial :: Accounting",
]

# Include minimum versions for 'minimum envionment' test in test workflow.
dependencies = [
    "beancount >=2.3.6",
    "beangulp >=0.1",
    "pandas >=2.2",
]

# Include minimum versions for 'minimum envionment' test in test workflow.
[dependency-groups]
test = [
    "pytest >=8.4.2",
]
# Separate group required for test jobs running on python 3.13.
# Should be able to remove this provision once numpy and pandas officially support python 3.13.
test_py13 = [
    {include-group = "test"},
    "numpy>=2.1; python_version<'3.13'",
    "numpy>=2.3.3; python_version>='3.13'",
    "pandas>=2.3; python_version>='3.13'",
]

dev = [
    {include-group = "test"},
    "mypy >=1.18.2",
    "pre-commit >=4.3.0",
    # "ruff",  # use local standalone install or ruff extension for editor.
]

[project.urls]
homepage = "https://github.com/maread99/beanahead"
documentation = "https://github.com/maread99/beanahead"
"Issue Tracker" = "https://github.com/maread99/beanahead/issues"
"Source Code" = "https://github.com/maread99/beanahead"

[project.scripts]
beanahead = "beanahead.scripts.cli:main"

[tool.setuptools_scm]
write_to = "src/beanahead/_version.py"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
